--- a/spec/fixtures/vcr_cassettes/forecast_facade/returns_returns_forecast_data.yml
+++ b/spec/fixtures/vcr_cassettes/forecast_facade/returns_returns_forecast_data.yml
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 26 Sep 2021 14:25:12 GMT
+      - Sun, 26 Sep 2021 17:44:26 GMT
       Content-Type:
       - application/json;charset=UTF-8
       Content-Length:
@@ -35,13 +35,13 @@ http_interactions:
       Geocodetransactioncount:
       - '1'
       Last-Modified:
-      - Sun, 26 Sep 2021 14:25:12 GMT
+      - Sun, 26 Sep 2021 17:44:26 GMT
       Pragma:
       - no-cache
       Reversegeocodetransactioncount:
       - '0'
       Set-Cookie:
-      - JSESSIONID=B0684D4298EBFAF05B412E54B24D7454; Path=/; HttpOnly
+      - JSESSIONID=CC1CE008188DBEED0CBDD59994C10F14; Path=/; HttpOnly
       Status:
       - success
       Transactionweight:
@@ -51,12 +51,12 @@ http_interactions:
       string: '{"info":{"statuscode":0,"copyright":{"text":"\u00A9 2021 MapQuest,
         Inc.","imageUrl":"http://api.mqcdn.com/res/mqlogo.gif","imageAltText":"\u00A9
         2021 MapQuest, Inc."},"messages":[]},"options":{"maxResults":-1,"thumbMaps":true,"ignoreLatLngInput":false},"results":[{"providedLocation":{"location":"denver,co"},"locations":[{"street":"","adminArea6":"","adminArea6Type":"Neighborhood","adminArea5":"Denver","adminArea5Type":"City","adminArea4":"Denver
-        County","adminArea4Type":"County","adminArea3":"CO","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A5XAX","geocodeQuality":"CITY","dragPoint":false,"sideOfStreet":"N","linkId":"282041090","unknownInput":"","type":"s","latLng":{"lat":39.738453,"lng":-104.984853},"displayLatLng":{"lat":39.738453,"lng":-104.984853},"mapUrl":"http://www.mapquestapi.com/staticmap/v5/map?key=<key>&type=map&size=225,160&locations=39.738453,-104.984853|marker-sm-50318A-1&scalebar=true&zoom=12&rand=-1224331572"},{"street":"","adminArea6":"","adminArea6Type":"Neighborhood","adminArea5":"","adminArea5Type":"City","adminArea4":"Denver
-        County","adminArea4Type":"County","adminArea3":"CO","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A4XAX","geocodeQuality":"COUNTY","dragPoint":false,"sideOfStreet":"N","linkId":"282932003","unknownInput":"","type":"s","latLng":{"lat":39.738453,"lng":-104.984853},"displayLatLng":{"lat":39.738453,"lng":-104.984853},"mapUrl":"http://www.mapquestapi.com/staticmap/v5/map?key=<key>&type=map&size=225,160&locations=39.738453,-104.984853|marker-sm-50318A-2&scalebar=true&zoom=9&rand=-1236248933"}]}]}'
-  recorded_at: Sun, 26 Sep 2021 14:25:12 GMT
+        County","adminArea4Type":"County","adminArea3":"CO","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A5XAX","geocodeQuality":"CITY","dragPoint":false,"sideOfStreet":"N","linkId":"282041090","unknownInput":"","type":"s","latLng":{"lat":39.738453,"lng":-104.984853},"displayLatLng":{"lat":39.738453,"lng":-104.984853},"mapUrl":"http://www.mapquestapi.com/staticmap/v5/map?key=<key>&type=map&size=225,160&locations=39.738453,-104.984853|marker-sm-50318A-1&scalebar=true&zoom=12&rand=-1738461685"},{"street":"","adminArea6":"","adminArea6Type":"Neighborhood","adminArea5":"","adminArea5Type":"City","adminArea4":"Denver
+        County","adminArea4Type":"County","adminArea3":"CO","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A4XAX","geocodeQuality":"COUNTY","dragPoint":false,"sideOfStreet":"N","linkId":"282932003","unknownInput":"","type":"s","latLng":{"lat":39.738453,"lng":-104.984853},"displayLatLng":{"lat":39.738453,"lng":-104.984853},"mapUrl":"http://www.mapquestapi.com/staticmap/v5/map?key=<key>&type=map&size=225,160&locations=39.738453,-104.984853|marker-sm-50318A-2&scalebar=true&zoom=9&rand=-1641682568"}]}]}'
+  recorded_at: Sun, 26 Sep 2021 17:44:26 GMT
 - request:
     method: get
-    uri: https://api.openweathermap.org/data/2.5/onecall?appid=<appid>&lat=39.738453&lon=-104.984853&units=imperial
+    uri: https://api.openweathermap.org/data/2.5/onecall?appid=<appid>&exclude=minutely,alerts&lat=39.738453&lon=-104.984853&units=imperial
     body:
       encoding: US-ASCII
       string: ''
@@ -75,15 +75,15 @@ http_interactions:
       Server:
       - openresty
       Date:
-      - Sun, 26 Sep 2021 14:25:12 GMT
+      - Sun, 26 Sep 2021 17:44:26 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '19798'
+      - '17605'
       Connection:
       - keep-alive
       X-Cache-Key:
-      - "/data/2.5/onecall?lat=39.74&lon=-104.98&units=imperial"
+      - "/data/2.5/onecall?exclude=minutely%2Calerts&lat=39.74&lon=-104.98&units=imperial"
       Access-Control-Allow-Origin:
       - "*"
       Access-Control-Allow-Credentials:
@@ -92,16 +92,13 @@ http_interactions:
       - GET, POST
     body:
       encoding: UTF-8
-      string: '{"lat":39.7385,"lon":-104.9849,"timezone":"America/Denver","timezone_offset":-21600,"current":{"dt":1632666312,"sunrise":1632660694,"sunset":1632703840,"temp":63.19,"feels_like":60.94,"pressure":1015,"humidity":37,"dew_point":36.52,"uvi":0.28,"clouds":0,"visibility":10000,"wind_speed":1.01,"wind_deg":228,"wind_gust":4,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}]},"minutely":[{"dt":1632666360,"precipitation":0},{"dt":1632666420,"precipitation":0},{"dt":1632666480,"precipitation":0},{"dt":1632666540,"precipitation":0},{"dt":1632666600,"precipitation":0},{"dt":1632666660,"precipitation":0},{"dt":1632666720,"precipitation":0},{"dt":1632666780,"precipitation":0},{"dt":1632666840,"precipitation":0},{"dt":1632666900,"precipitation":0},{"dt":1632666960,"precipitation":0},{"dt":1632667020,"precipitation":0},{"dt":1632667080,"precipitation":0},{"dt":1632667140,"precipitation":0},{"dt":1632667200,"precipitation":0},{"dt":1632667260,"precipitation":0},{"dt":1632667320,"precipitation":0},{"dt":1632667380,"precipitation":0},{"dt":1632667440,"precipitation":0},{"dt":1632667500,"precipitation":0},{"dt":1632667560,"precipitation":0},{"dt":1632667620,"precipitation":0},{"dt":1632667680,"precipitation":0},{"dt":1632667740,"precipitation":0},{"dt":1632667800,"precipitation":0},{"dt":1632667860,"precipitation":0},{"dt":1632667920,"precipitation":0},{"dt":1632667980,"precipitation":0},{"dt":1632668040,"precipitation":0},{"dt":1632668100,"precipitation":0},{"dt":1632668160,"precipitation":0},{"dt":1632668220,"precipitation":0},{"dt":1632668280,"precipitation":0},{"dt":1632668340,"precipitation":0},{"dt":1632668400,"precipitation":0},{"dt":1632668460,"precipitation":0},{"dt":1632668520,"precipitation":0},{"dt":1632668580,"precipitation":0},{"dt":1632668640,"precipitation":0},{"dt":1632668700,"precipitation":0},{"dt":1632668760,"precipitation":0},{"dt":1632668820,"precipitation":0},{"dt":1632668880,"precipitation":0},{"dt":1632668940,"precipitation":0},{"dt":1632669000,"precipitation":0},{"dt":1632669060,"precipitation":0},{"dt":1632669120,"precipitation":0},{"dt":1632669180,"precipitation":0},{"dt":1632669240,"precipitation":0},{"dt":1632669300,"precipitation":0},{"dt":1632669360,"precipitation":0},{"dt":1632669420,"precipitation":0},{"dt":1632669480,"precipitation":0},{"dt":1632669540,"precipitation":0},{"dt":1632669600,"precipitation":0},{"dt":1632669660,"precipitation":0},{"dt":1632669720,"precipitation":0},{"dt":1632669780,"precipitation":0},{"dt":1632669840,"precipitation":0},{"dt":1632669900,"precipitation":0},{"dt":1632669960,"precipitation":0}],"hourly":[{"dt":1632664800,"temp":63.19,"feels_like":60.94,"pressure":1015,"humidity":37,"dew_point":36.52,"uvi":0.28,"clouds":0,"visibility":10000,"wind_speed":5.64,"wind_deg":215,"wind_gust":9.6,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1632668400,"temp":64.9,"feels_like":62.65,"pressure":1014,"humidity":33,"dew_point":35.15,"uvi":1.11,"clouds":0,"visibility":10000,"wind_speed":5.77,"wind_deg":217,"wind_gust":8.77,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1632672000,"temp":68.86,"feels_like":66.76,"pressure":1013,"humidity":28,"dew_point":34.47,"uvi":2.57,"clouds":0,"visibility":10000,"wind_speed":3.8,"wind_deg":229,"wind_gust":6.69,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1632675600,"temp":74.59,"feels_like":72.79,"pressure":1011,"humidity":22,"dew_point":33.28,"uvi":4.31,"clouds":0,"visibility":10000,"wind_speed":2.24,"wind_deg":281,"wind_gust":8.32,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1632679200,"temp":80.67,"feels_like":78.78,"pressure":1009,"humidity":15,"dew_point":29.17,"uvi":5.73,"clouds":2,"visibility":10000,"wind_speed":2.3,"wind_deg":25,"wind_gust":7.34,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1632682800,"temp":86.52,"feels_like":83.1,"pressure":1007,"humidity":9,"dew_point":21.43,"uvi":6.26,"clouds":30,"visibility":10000,"wind_speed":4.52,"wind_deg":66,"wind_gust":8.46,"weather":[{"id":802,"main":"Clouds","description":"scattered
-        clouds","icon":"03d"}],"pop":0},{"dt":1632686400,"temp":87.51,"feels_like":83.89,"pressure":1006,"humidity":9,"dew_point":20.62,"uvi":5.71,"clouds":24,"visibility":10000,"wind_speed":6.02,"wind_deg":83,"wind_gust":8.01,"weather":[{"id":801,"main":"Clouds","description":"few
-        clouds","icon":"02d"}],"pop":0},{"dt":1632690000,"temp":88.09,"feels_like":84.4,"pressure":1005,"humidity":8,"dew_point":20.34,"uvi":4.31,"clouds":18,"visibility":10000,"wind_speed":5.99,"wind_deg":87,"wind_gust":7.61,"weather":[{"id":801,"main":"Clouds","description":"few
-        clouds","icon":"02d"}],"pop":0},{"dt":1632693600,"temp":88.12,"feels_like":84.43,"pressure":1004,"humidity":8,"dew_point":20.07,"uvi":2.54,"clouds":14,"visibility":10000,"wind_speed":5.61,"wind_deg":86,"wind_gust":5.23,"weather":[{"id":801,"main":"Clouds","description":"few
+      string: '{"lat":39.7385,"lon":-104.9849,"timezone":"America/Denver","timezone_offset":-21600,"current":{"dt":1632678266,"sunrise":1632660694,"sunset":1632703840,"temp":83.19,"feels_like":80.62,"pressure":1011,"humidity":18,"dew_point":35.33,"uvi":5.73,"clouds":3,"visibility":10000,"wind_speed":1.01,"wind_deg":294,"wind_gust":3,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}]},"hourly":[{"dt":1632675600,"temp":82.99,"feels_like":80.42,"pressure":1011,"humidity":16,"dew_point":32.23,"uvi":4.31,"clouds":2,"visibility":10000,"wind_speed":2.24,"wind_deg":281,"wind_gust":8.32,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1632679200,"temp":83.19,"feels_like":80.62,"pressure":1011,"humidity":18,"dew_point":35.33,"uvi":5.73,"clouds":3,"visibility":10000,"wind_speed":2.3,"wind_deg":25,"wind_gust":7.34,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1632682800,"temp":83.86,"feels_like":81.03,"pressure":1010,"humidity":16,"dew_point":32.92,"uvi":6.26,"clouds":8,"visibility":10000,"wind_speed":4.52,"wind_deg":66,"wind_gust":8.46,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1632686400,"temp":84.92,"feels_like":81.81,"pressure":1009,"humidity":14,"dew_point":30.65,"uvi":5.71,"clouds":11,"visibility":10000,"wind_speed":6.02,"wind_deg":83,"wind_gust":8.01,"weather":[{"id":801,"main":"Clouds","description":"few
+        clouds","icon":"02d"}],"pop":0},{"dt":1632690000,"temp":86.13,"feels_like":82.74,"pressure":1007,"humidity":12,"dew_point":28.15,"uvi":4.31,"clouds":12,"visibility":10000,"wind_speed":5.99,"wind_deg":87,"wind_gust":7.61,"weather":[{"id":801,"main":"Clouds","description":"few
+        clouds","icon":"02d"}],"pop":0},{"dt":1632693600,"temp":87.13,"feels_like":83.57,"pressure":1005,"humidity":10,"dew_point":24.94,"uvi":2.54,"clouds":12,"visibility":10000,"wind_speed":5.61,"wind_deg":86,"wind_gust":5.23,"weather":[{"id":801,"main":"Clouds","description":"few
         clouds","icon":"02d"}],"pop":0},{"dt":1632697200,"temp":87.8,"feels_like":84.16,"pressure":1004,"humidity":8,"dew_point":19.99,"uvi":1.09,"clouds":14,"visibility":10000,"wind_speed":5.17,"wind_deg":106,"wind_gust":4.81,"weather":[{"id":801,"main":"Clouds","description":"few
         clouds","icon":"02d"}],"pop":0},{"dt":1632700800,"temp":86.25,"feels_like":82.89,"pressure":1004,"humidity":9,"dew_point":20.66,"uvi":0.26,"clouds":28,"visibility":10000,"wind_speed":6.33,"wind_deg":108,"wind_gust":7.63,"weather":[{"id":802,"main":"Clouds","description":"scattered
         clouds","icon":"03d"}],"pop":0},{"dt":1632704400,"temp":82.02,"feels_like":79.61,"pressure":1006,"humidity":11,"dew_point":22.5,"uvi":0,"clouds":97,"visibility":10000,"wind_speed":7.54,"wind_deg":83,"wind_gust":15.46,"weather":[{"id":804,"main":"Clouds","description":"overcast
@@ -141,8 +138,11 @@ http_interactions:
         clouds","icon":"04n"}],"pop":0},{"dt":1632826800,"temp":67.89,"feels_like":65.61,"pressure":1006,"humidity":26,"dew_point":31.68,"uvi":0,"clouds":99,"visibility":10000,"wind_speed":5.12,"wind_deg":190,"wind_gust":9.1,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04n"}],"pop":0},{"dt":1632830400,"temp":68,"feels_like":65.82,"pressure":1006,"humidity":28,"dew_point":33.31,"uvi":0,"clouds":99,"visibility":10000,"wind_speed":3.11,"wind_deg":244,"wind_gust":5.14,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04n"}],"pop":0},{"dt":1632834000,"temp":67.26,"feels_like":65.05,"pressure":1006,"humidity":29,"dew_point":33.64,"uvi":0,"clouds":99,"visibility":10000,"wind_speed":2.53,"wind_deg":197,"wind_gust":2.62,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04d"}],"pop":0}],"daily":[{"dt":1632679200,"sunrise":1632660694,"sunset":1632703840,"moonrise":1632715200,"moonset":1632680580,"moon_phase":0.68,"temp":{"day":80.67,"min":63.19,"max":88.12,"night":74.84,"eve":86.25,"morn":63.66},"feels_like":{"day":78.78,"night":72.73,"eve":82.89,"morn":61.18},"pressure":1009,"humidity":15,"dew_point":29.17,"wind_speed":7.54,"wind_deg":83,"wind_gust":15.46,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"clouds":2,"pop":0,"uvi":6.26},{"dt":1632765600,"sunrise":1632747150,"sunset":1632790142,"moonrise":1632804000,"moonset":1632770520,"moon_phase":0.71,"temp":{"day":82.67,"min":67.01,"max":86.9,"night":74.03,"eve":85.03,"morn":67.33},"feels_like":{"day":80.1,"night":71.98,"eve":81.9,"morn":64.71},"pressure":1009,"humidity":11,"dew_point":22.5,"wind_speed":10.49,"wind_deg":117,"wind_gust":18.57,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"pop":0},{"dt":1632837600,"temp":68.61,"feels_like":66.49,"pressure":1006,"humidity":28,"dew_point":33.84,"uvi":0.22,"clouds":99,"visibility":10000,"wind_speed":3.04,"wind_deg":248,"wind_gust":4.05,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"pop":0},{"dt":1632841200,"temp":71.11,"feels_like":69.1,"pressure":1006,"humidity":25,"dew_point":33.33,"uvi":0.9,"clouds":99,"visibility":10000,"wind_speed":2.48,"wind_deg":45,"wind_gust":3.62,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"pop":0},{"dt":1632844800,"temp":73.72,"feels_like":71.87,"pressure":1005,"humidity":23,"dew_point":34.18,"uvi":2.09,"clouds":99,"visibility":10000,"wind_speed":2.84,"wind_deg":73,"wind_gust":4.97,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"pop":0}],"daily":[{"dt":1632679200,"sunrise":1632660694,"sunset":1632703840,"moonrise":1632715200,"moonset":1632680580,"moon_phase":0.68,"temp":{"day":83.19,"min":64,"max":87.8,"night":74.84,"eve":86.25,"morn":64.38},"feels_like":{"day":80.62,"night":72.73,"eve":82.89,"morn":61.56},"pressure":1011,"humidity":18,"dew_point":35.33,"wind_speed":7.54,"wind_deg":83,"wind_gust":15.46,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"clouds":3,"pop":0,"uvi":6.26},{"dt":1632765600,"sunrise":1632747150,"sunset":1632790142,"moonrise":1632804000,"moonset":1632770520,"moon_phase":0.71,"temp":{"day":82.67,"min":67.01,"max":86.9,"night":74.03,"eve":85.03,"morn":67.33},"feels_like":{"day":80.1,"night":71.98,"eve":81.9,"morn":64.71},"pressure":1009,"humidity":11,"dew_point":22.5,"wind_speed":10.49,"wind_deg":117,"wind_gust":18.57,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04d"}],"clouds":98,"pop":0,"uvi":5.97},{"dt":1632852000,"sunrise":1632833607,"sunset":1632876443,"moonrise":1632893220,"moonset":1632860280,"moon_phase":0.75,"temp":{"day":79,"min":67.26,"max":80.89,"night":67.66,"eve":77.68,"morn":68},"feels_like":{"day":79,"night":65.95,"eve":76.28,"morn":65.82},"pressure":1003,"humidity":20,"dew_point":34.77,"wind_speed":11.92,"wind_deg":170,"wind_gust":14.36,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04d"}],"clouds":99,"pop":0.59,"uvi":4.75},{"dt":1632938400,"sunrise":1632920064,"sunset":1632962745,"moonrise":0,"moonset":1632949800,"moon_phase":0.77,"temp":{"day":70.59,"min":53.67,"max":70.59,"night":54.91,"eve":53.67,"morn":65.14},"feels_like":{"day":69.04,"night":53.44,"eve":52.41,"morn":63.32},"pressure":1009,"humidity":36,"dew_point":42.4,"wind_speed":12.53,"wind_deg":349,"wind_gust":17.31,"weather":[{"id":501,"main":"Rain","description":"moderate
         rain","icon":"10d"}],"clouds":73,"pop":1,"rain":17.66,"uvi":5.38},{"dt":1633024800,"sunrise":1633006521,"sunset":1633049047,"moonrise":1632982860,"moonset":1633038900,"moon_phase":0.8,"temp":{"day":61.36,"min":51.35,"max":66.85,"night":63.1,"eve":66.33,"morn":51.35},"feels_like":{"day":58.98,"night":61.18,"eve":64.35,"morn":48.54},"pressure":1022,"humidity":38,"dew_point":35.67,"wind_speed":8.59,"wind_deg":345,"wind_gust":11.27,"weather":[{"id":500,"main":"Rain","description":"light
@@ -150,5 +150,5 @@ http_interactions:
         sky","icon":"01d"}],"clouds":2,"pop":0,"uvi":6},{"dt":1633197600,"sunrise":1633179436,"sunset":1633221652,"moonrise":1633163160,"moonset":1633216200,"moon_phase":0.87,"temp":{"day":73.49,"min":58.48,"max":78.46,"night":69.94,"eve":76.53,"morn":58.48},"feels_like":{"day":71.29,"night":67.68,"eve":74.55,"morn":55.44},"pressure":1019,"humidity":16,"dew_point":23.81,"wind_speed":4.45,"wind_deg":160,"wind_gust":8.37,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"clouds":0,"pop":0,"uvi":6},{"dt":1633284000,"sunrise":1633265895,"sunset":1633307955,"moonrise":1633253640,"moonset":1633304460,"moon_phase":0.9,"temp":{"day":74.16,"min":60.28,"max":79.14,"night":68.72,"eve":77.45,"morn":60.28},"feels_like":{"day":72.12,"night":66.38,"eve":75.56,"morn":57.36},"pressure":1018,"humidity":18,"dew_point":27.45,"wind_speed":8.99,"wind_deg":176,"wind_gust":16.26,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"clouds":9,"pop":0,"uvi":6}]}'
-  recorded_at: Sun, 26 Sep 2021 14:25:12 GMT
+  recorded_at: Sun, 26 Sep 2021 17:44:26 GMT
 recorded_with: VCR 6.0.0
