--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,15 @@ rbenv:
 - 2.7.2
 addons:
   postgresql: 9.6
-# script:
-# - bundle exec rails db:{create,migrate} RAILS_ENV=test
-# - bundle exec rspec
-# deploy:
-#   provider: heroku
-#   api_key:
-#   app: sweater-weatha
-#   run: rails db:migrate
-#   on:
-#     branch: main
-# notifications:
-#   email: false
+script:
+- bundle exec rails db:{create,migrate} RAILS_ENV=test
+- bundle exec rspec
+deploy:
+  provider: heroku
+  api_key:
+  app: sweater-weatha
+  run: rails db:migrate
+  on:
+    branch: main
+notifications:
+  email: false
